--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -76,7 +76,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="@string/username_text"
         android:textColor="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +90,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:fontFamily="@font/poppins_regular"
         android:hint="@string/username_text_hint"
         android:inputType="textEmailAddress"
         android:textSize="18sp"
@@ -106,7 +104,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="@string/password_text"
         android:textColor="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,7 +118,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:fontFamily="@font/poppins_regular"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,7 +130,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="@string/forgot_password_text"
         android:textAllCaps="false"
         android:textColor="@color/purple_500"
@@ -154,12 +149,9 @@
 
     <Button
         android:id="@+id/fragment_login_login_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/purple_700"
+        android:theme="@style/dark_button"
+        style="@style/button"
+        android:layout_marginHorizontal="8dp"
         android:text="@string/login_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
