--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -6,48 +6,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background"
-    tools:context=".RegistrationFragment">
+    tools:context=".RegistrationFragment"
+    android:paddingHorizontal="15dp"
+    android:paddingVertical="25dp">
 
     <EditText
         android:id="@+id/fragment_registration_phone_number_et"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="8dp"
         android:ems="10"
-        android:fontFamily="@font/poppins_regular"
         android:hint="@string/user_registration_enter_phone_number"
         android:inputType="phone"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_username" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_registration_phone_number" />
 
     <TextView
         android:id="@+id/fragment_registration_phone_number"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="@string/user_registration_phone_number"
         android:textColor="@color/purple_500"
-        android:textSize="20sp"
+        android:paddingTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_email_et" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_et" />
 
     <TextView
         android:id="@+id/fragment_registration_title"
         style="@style/page_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:text="@string/user_registration_Register_title"
         android:textAlignment="center"
         android:textColor="@color/purple_700"
@@ -60,13 +52,9 @@
         android:id="@+id/fragment_registration_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="Email"
         android:textColor="@color/purple_500"
-        android:textSize="20sp"
+        android:paddingTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_registration_title"
@@ -78,95 +66,72 @@
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:fontFamily="@font/poppins_regular"
         android:hint="@string/enter_email_text"
         android:inputType="textEmailAddress"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_username" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_registration_username" />
 
     <TextView
         android:id="@+id/fragment_registration_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="@string/password_text"
         android:textColor="@color/purple_500"
-        android:textSize="20sp"
+        android:paddingTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_phone_number_et" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_registration_email_et" />
 
     <EditText
         android:id="@+id/fragment_registration_password_et"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
         android:ems="10"
-        android:fontFamily="@font/poppins_regular"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_registration_password"/>
 
     <TextView
         android:id="@+id/fragment_registration_ToS"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="@string/user_registration_TOS"
         android:textAlignment="center"
         android:textColor="@color/purple_500"
         android:textSize="12sp"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_MFA_enrollment_box" />
+        app:layout_constraintBottom_toTopOf="@id/fragment_registration_copyright"/>
 
     <Button
         android:id="@+id/fragment_registration_btn"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:backgroundTint="@color/purple_700"
+        style="@style/button"
+        android:theme="@style/dark_button"
         android:text="@string/user_registration_Register_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_MFA_enrollment_box" />
+        app:layout_constraintBottom_toTopOf="@id/fragment_registration_ToS" />
 
     <TextView
         android:id="@+id/fragment_registration_copyright"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/poppins_regular"
         android:text="@string/user_registration_Batch2023"
         android:textAlignment="center"
         android:textColor="@color/purple_500"
         android:textSize="12sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_btn" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <CheckBox
         android:id="@+id/fragment_registration_MFA_enrollment_box"
@@ -177,9 +142,8 @@
         android:textSize="12sp"
         android:checked="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_password_et"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_registration_phone_number_et"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="439dp" />
