--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -275,12 +275,7 @@
 
        <Button
            android:id="@+id/btn_update_profile"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginVertical="20dp"
-           android:background="@drawable/round_corner"
-           style="?android:attr/borderlessButtonStyle"
-           android:paddingVertical="13dp"
+           style="@style/button"
            app:layout_constraintTop_toBottomOf="@+id/et_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
