--- a/app/src/main/res/layout/fragment_join_group.xml
+++ b/app/src/main/res/layout/fragment_join_group.xml
@@ -99,21 +99,8 @@
 
     <Button
         android:id="@+id/join_group_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/purple_500"
-        android:fontFamily="@font/karla"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:padding="15dp"
-        android:layout_marginTop="50dp"
+        style="@style/button"
         android:text="Search"
         android:textStyle="bold"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:cornerRadius="10dp"
-        android:stateListAnimator="@null"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
