--- a/app/src/main/res/layout/fragment_view_group_info.xml
+++ b/app/src/main/res/layout/fragment_view_group_info.xml
@@ -32,8 +32,8 @@
             android:layout_marginEnd="15dp"
             android:layout_marginVertical="15dp"/>
 
-        <!-- relative layout holds the group name and biscuits -->
-        <RelativeLayout
+        <!-- Linear layout holds the group name and biscuits -->
+        <LinearLayout
             android:id="@+id/group_info_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,26 +42,27 @@
             android:layout_below="@id/group_profile_more_btn">
             <TextView
                 android:id="@+id/group_name"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:theme="@style/page_title" />
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:theme="@style/page_title"
+                android:paddingEnd="12dp"/>
             <TextView
                 android:id="@+id/biscuit_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:textColor="@color/black"
-                android:layout_toStartOf="@id/biscuit_icon"
-                android:layout_centerInParent="true"/>
+                android:layout_gravity="start"
+                android:paddingTop="10dp"/>
             <ImageView
                 android:id="@+id/biscuit_icon"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:contentDescription="@string/biscuit_icon"
                 android:src="@drawable/biscuits_icon"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"/>
-        </RelativeLayout>
+                android:layout_marginTop="10dp"/>
+        </LinearLayout>
 
         <!-- group photo -->
         <ImageView
