--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,10 @@
         <item name="android:textSize">28sp</item>
     </style>
 
+    <!--    button for every page-->
+    <style name="dark_button" parent="">
+        <item name="colorPrimary">@color/dark_brown</item>
+    </style>
 <!--    page heading-->
     <style name="page_heading" parent="" >
         <item name="android:fontFamily">@font/karla_bold</item>
@@ -51,8 +55,8 @@
 
 <!--    page margin-->
     <style name="page_margin" parent="" >
-        <item name="android:layout_marginLeft">25dp</item>
-        <item name="android:layout_marginRight">25dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">15dp</item>
     </style>
 
 </resources>
