--- a/app/src/main/res/layout/fragment_initial_profile_personalization.xml
+++ b/app/src/main/res/layout/fragment_initial_profile_personalization.xml
@@ -15,28 +15,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/app_background"
+        android:padding="10dp"
         >
         <!--TextView that tells user about the purpose of the page      -->
         <TextView
             android:id="@+id/tv_greeting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/sv_personalize"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingTop="30dp"
             android:gravity="fill_vertical"
-            android:textSize="20sp"
+            android:text="Let's Personalize Your New Account"
             android:textColor="@color/purple_700"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:text="Let's Personalize Your New Account" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/sv_personalize" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_image_image_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_greeting"
+            android:paddingVertical="30dp"
+            app:layout_constraintBottom_toTopOf="@id/tv_first_name"
             app:layout_constraintStart_toStartOf="@id/tv_greeting"
-            app:layout_constraintBottom_toTopOf="@id/tv_namePrompt">
+            app:layout_constraintTop_toBottomOf="@id/tv_greeting">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_userPhoto"
@@ -56,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
+                android:contentDescription="TODO"
                 app:backgroundTint="@color/purple_500"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_userPhoto"
                 app:layout_constraintEnd_toEndOf="@+id/iv_userPhoto"
@@ -64,8 +68,7 @@
                 app:layout_constraintTop_toTopOf="@+id/iv_userPhoto"
                 app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/change_profile"
-                tools:ignore="MissingConstraints"
-                android:contentDescription="TODO" />
+                tools:ignore="MissingConstraints" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -74,85 +77,90 @@
         <!--   Will Prompt User to Put a display name      -->
         <TextView
             android:id="@+id/tv_first_name"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Enter First Name"
             android:textColor="@color/purple_500"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_image_image_button"
+            android:paddingBottom="5dp"
             />
         <EditText
             android:id="@+id/et_first_name"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             android:hint="First Name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_first_name"
-            android:paddingBottom="15dp"
             android:background="@drawable/round_corner"
             />
         <TextView
             android:id="@+id/tv_last_name"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Enter Last Name"
             android:textColor="@color/purple_500"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_first_name"
+            android:paddingTop="13dp"
+            android:paddingBottom="5dp"
             />
         <EditText
             android:id="@+id/et_last_name"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Last Name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_last_name"
-            android:paddingBottom="15dp"
+            android:padding="10dp"
+            android:background="@drawable/round_corner"
             />
         <TextView
             android:id="@+id/tv_namePrompt"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="What should be your display Name: "
             android:textColor="@color/purple_500"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_last_name"
+            android:paddingTop="13dp"
+            android:paddingBottom="5dp"
             />
         <!--  Area where User will enter their display name    -->
         <EditText
             android:id="@+id/et_displayName"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Display Name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_namePrompt"
             android:background="@drawable/round_corner"
-            android:paddingBottom="15dp"
+            android:padding="10dp"
             />
         <!--    Prompts User to select their birthdate     -->
         <TextView
             android:id="@+id/tv_birthDatePrompt"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/purple_500"
             android:text="Select Your Date Of Birth: "
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_displayName"
-            android:paddingTop="10dp"
+            android:paddingTop="13dp"
             />
 
         <!--    Used by the user to select their birthdate     -->
         <Button
             android:id="@+id/btn_birthdayPicker"
-            android:layout_width="331dp"
-            android:layout_height="wrap_content"
+            style="@style/button"
             android:hint="Birthdate"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -164,15 +172,16 @@
         <!--   Prompts User to Select their Gender      -->
         <TextView
             android:id="@+id/tv_genderPrompt"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/purple_500"
             android:text="What Gender Do You Classify Yourself as "
-            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/btn_birthdayPicker"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/gender_radioGroup"
+            android:paddingTop="13dp"
+            android:paddingBottom="5dp"
             />
 
         <!--     RadioGroup that Contains the Gender options    -->
@@ -180,9 +189,10 @@
             android:id="@+id/gender_radioGroup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_genderPrompt"
-            app:layout_constraintStart_toStartOf="@id/tv_genderPrompt"
-            app:layout_constraintEnd_toEndOf="@id/tv_genderPrompt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:orientation="vertical"
             android:background="@drawable/round_corner">
 
@@ -209,14 +219,16 @@
         <!--   Prompts User to input personal bio      -->
         <TextView
             android:id="@+id/tv_personalBioPrompt"
-            android:layout_width="331dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/purple_500"
-            tools:text="Personal Bio "
-            android:layout_marginTop="10dp"
+            android:text="Personal Bio "
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/gender_radioGroup"
+            app:layout_constraintBottom_toTopOf="@id/et_personalBio"
+            android:paddingTop="13dp"
+            android:paddingBottom="5dp"
             />
         <!--    Area for User to input personal bio     -->
         <EditText
@@ -225,36 +237,30 @@
             android:layout_height="150dp"
             android:background="@drawable/round_corner"
             android:ems="10"
-            android:gravity="start|top"
             android:inputType="textMultiLine"
             android:minHeight="48dp"
             android:padding="10dp"
-            app:layout_constraintStart_toStartOf="@id/gender_radioGroup"
-            app:layout_constraintEnd_toEndOf="@id/btn_birthdayPicker"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_personalBioPrompt"
             />
         <!--    Button for user to update their profile and move on to the next section     -->
         <Button
             android:id="@+id/btn_update"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
+            style="@style/button"
             app:layout_constraintTop_toBottomOf="@id/et_personalBio"
             app:layout_constraintStart_toStartOf="@id/et_personalBio"
             app:layout_constraintBottom_toTopOf="@id/btn_skip"
-            android:layout_marginTop="10dp"
-            android:paddingTop="5dp"
+            android:layout_marginTop="20dp"
             android:text="@string/update"
             />
         <Button
             android:id="@+id/btn_skip"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
+            style="@style/button"
+            android:theme="@style/dark_button"
             app:layout_constraintTop_toBottomOf="@id/btn_update"
             app:layout_constraintStart_toStartOf="@id/btn_update"
             app:layout_constraintBottom_toBottomOf="@id/sv_personalize"
-            android:layout_marginTop="10dp"
-            android:paddingTop="5dp"
-            android:layout_marginBottom="40dp"
             android:text="Skip For Now"
             />
 
